# RustaceanUp

./: .gitignore  LICENSE  README.md
CpRust/: Cargo.toml
CpRust/src/: A_Array_coloring  A_Array_coloring.rs  A_Desorting  A_Desorting.rs  A_Forbidden_Integer  A_Forbidden_Integer.rs  A_Forbidden_Integer_output0.txt  A_Forked.rs  B_no_dividing.rs  Mutating_ref  Mutating_ref.rs  b_chemistry  b_chemistry.cpp  b_chemistry.rs  box1  box1.rs  closures1  closures1.rs  command_args.rs  contat_String.rs  cosine_similarity  cosine_similarity.rs  counting_sort.rs  dangling_ref  dangling_ref.rs  first_pattern  first_pattern.rs  frequency_check.rs  generics.rs  hash  hash.rs  hash_map.rs  hash_map_inc  hash_map_inc.rs  hash_set  hash_set.rs  inout  inout.rs  keycheck  keycheck.rs  (+44 more)
codeforces/: Cargo.toml
codeforces/src/: a_conins.rs  a_grasshopper_on_a_line.rs  a_kapreker_constant.rs  a_make_it_beautiful.rs  a_milya_two_arrays.rs  a_one_and_two.rs  a_string.rs  a_walking_master.rs  b.cpp  b_cost_of_array.rs  b_gro_the_tree.rs  b_two_large_bags.rs  c_customer.rs  skibidus.rs  skibidus_ohio.rs
codeforces/src/.cph/: .a_make_it_beautiful.rs_e49368dca17d47f705c2c55a9920554f.prob  .a_one_and_two.rs_60a179a33b582978f79278ada0dbeb1d.prob  .a_string.rs_2fee9f16316547032848e44258400aee.prob  .b_gro_the_tree.rs_99d3d257c02d4346c5511065cffc9e30.prob  .skibidu_and_easy.py_3c3b2aaa376688a89b470a4052917950.prob  .skibidus.rs_a8a3e86f2874789fcb00268d97c97503.prob  .skibidus_ohio.rs_fc31f1f3bfc069218809ef63154da447.prob
cp-tricks/: Cargo.toml
cp-tricks/src/: kadanes-algo.rs  main.rs  nested-labels.rs  time-while.rs  trait-bounds.rs
cpp/: a  (+1 more)
dsa/: Cargo.toml
dsa/code1/: Cargo.toml
dsa/code2/: Cargo.toml
dsa/code2/src/: main.rs
dsa/src/: 3-3-4-count_and_compare  3-3-4-count_and_compare.rs  4-3-2-divide_by_two.rs  4-3-2-implementing_stack  4-3-2-implementing_stack.rs  4-3-3-balanced-parantheses  4-3-3-balanced-parantheses.rs  4-4-3_hot_potato.rs  4-5-3_palindrome_check.rs  7-11-counting_sort.rs  Valid_parentheses.rs  connected_component_store.rs  connnected_component.rs  deletes_node_linklist.rs  dfs-gfg.rs  dfs-tree-height-depth.rs  dfs-tree.rs  dfs.cpp  dfs.rs  dfs_cycle.rs  dijikstra  dijkastra.cpp  double_num_linkedlist.rs  flood-fill-graph.rs  grahams_convexhall.rs  graphs.rs  increment.rs  linked_list.rs  linked_list1.rs  linkedlist_stack.rs  min-cost-dfs.rs  new.rs  palindrome_check_deq.rs  palindrome_st_qu.rs  prims.rs  remove_middle_linkedlist.rs  remove_nodes_linkedlist.rs  reverse_polish.rs  stack1.rs  testing.rs  (+2 more)
dsa/src/.cph/: .connected_component_store.rs_5024d90005d4b4a5ad698c1a506d91e2.prob
dynamic/: Cargo.toml
dynamic/src/: .gdb_history  2d-grid-comb.rs  2d-grid-iter.rs  2d_grid.rs  a-frog-1.rs  b-frog-2.rs  binomial-coefficient.rs  catalan-number.rs  coin-change-top-down.rs  coin-change.rs  decoding-digit-seq.rs  fibonacci-dp.rs  fibonacci-space-optimized.rs  lcs.rs  long-inc-sub.rs  longest-palindrome.rs  lucas-numbers.rs  matrix-chain.rs  nth-row-pascals-triangle.rs  output  pascals-triangle.rs  rod-cutting.rs  some_variant.rs  tempCodeRunnerFile.rs  tribonacci.rs
fearless_concurrency/: Cargo.toml
fearless_concurrency/src/: hello_channel.rs  hello_thread.rs  move_key.rs  shared-memory-mutex.rs  shared-state-mutex.rs
linked_list/: Cargo.toml
linked_list/src/: find-max-node.rs  iterate-linked-list.rs  merge-two-sorted-lists.rs  reverse-linked-list.rs
prob/: Cargo.toml
prob/src/: .fuse_hidden0000339b00000001  a-again-twentyfive.cpp  a-again-twentyfive.rs  a-anton-and-polyhedrons.rs  a-arrival-of-the-general.rs  a-cinema-line.rs  a-cloudberry-jam.rs  a-dislike-of-threes.rs  a-division.rs  a-dubstep.rs  a-final-verdict.rs  a-game-23.rs  a-game-with-sticks.rs  a-insomnia-cure.rs  a-interesting-drink.rs  a-jzzhu-and-children.rs  a-kefa-and-first-steps.rs  a-laptops.rs  a-lucky.rs  a-minimize.rs  a-minutes-before-the-new-year.rs  a-nastia-and-nearly-good-numbers.rs  a-nearly-lucky-number.rs  a-new-year-and-hurry.rs  a-new-year-transportation.rs  a-odd-divisor.rs  a-plus-one-the-subset.rs  a-plus-or-minus.rs  a-police-recruits.rs  a-sereja-and-dima.rs  a-serval-and-string.rs  a-short-sort.rs  a-spy-detected.rs  a-tram  a-tram.cpp  a-tram.rs  a-vanaya-and-fence.rs  a.cpp  a_adj_digit_sum  a_adj_digit_sum.rs  (+153 more)
prob/src/.cph/: .a.cpp_5e1bb036297132be85ffd93f83b1c01b.prob  .a_adj_digit_sum.rs_6fe85207348dad517098596a06689b27.prob  .a_amusing_joke.rs_fea9d35755e673a851e39e6dfb0615ca.prob  .a_brogramming_contest.rs_d5c8e6b2bf8aa57f8e6dd5ae45d59c43.prob  .a_everyone_likes_good_arrays.rs_00be0715af3f4645184572fd99924f05.prob  .a_make_equal_to_b.rs_0e61a5c9c04c35b775d4ad3cb017333f.prob  .a_make_it_zero.rs_feae6e1a4da630963bd1c69801f9ac1d.prob  .a_medium_number.rs_d27d3cbb2431ad95b5d20807cd76eaea.prob  .a_new_year_meet.rs_7f20b722a2bad379db0386dc3166752f.prob  .a_olympiad.rs_26c07edfe677f2116cd76e45cd1326a9.prob  .a_olympiad.rs_86bfc786e83243c515f07d4c3f823dde.prob  .a_play_never_ends.rs_52578393f4cfa4f66723a3506fb6112c.prob  .a_remove_smallest.rs_16733c6199000335180d0b6ecfea3d02.prob  .a_unit_array.rs_2d644af877c44e12c7a397ae3ea902a4.prob  .a_walking_master.rs_5e1cf203b4e49fed2e1cd607a55f5134.prob  .a_wasthere_array.rs_06453c2ea2c2abb26376bb813c2a53a2.prob  .b.cpp_284e0430f2013d0a32f240bd167b1ab0.prob  (+23 more)
sorting_algo/: Cargo.toml
sorting_algo/src/: bubble_sort.rs  counting_sort.rs  insertion_sort.rs  radix_sort.rs  selection_sort.rs
sorting_problems/: Cargo.toml
sorting_problems/src/: a_amusing_joke.rs  a_dragons.rs  a_make_equal_to_b.rs  a_new_year_meet.rs  a_olympiad.rs  a_reverse_substr.rs  b_atillas_favorite_problem.rs  b_barrels.rs  b_basketball_together.rs  b_grow_the_tree.rs  b_middle_class.rs  b_sorted_adj_diff.rs  duplicate_elem.rs  find_the_diff.rs  helpful_math.rs  increasing_array.rs  intersection.rs  kth-largest.rs  max-product-of-three.rs  mean-of-array.rs  min-abs-diff.rs  missing_number.rs  permutation.rs  repetitions.rs  smaller-than-curr.rs  sort-colors.rs  static_range_sum_queries.rs  two_knights.rs  vitos_family.rs  weird_algo.rs  whats_the_median.rs
(+106 files in other folders)
