dependencies = { }


[package]
name = "codeforces"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "a_milya_two_arrays"
path = "src/a_milya_two_arrays.rs"


[[bin]]
name = "b_cost_of_array"
path = "src/b_cost_of_array.rs"


[[bin]]
name = "c_customer"
path = "src/c_customer.rs"
[[bin]]
name = "skibidus"
path = "src/skibidus.rs"

[[bin]]
name = "skibidus_ohio"
path = "src/skibidus_ohio.rs"

[[bin]]
name = "a_string"
path = "src/a_string.rs"


