[dependencies]
num = "0.4.3"
text_io = "0.1.12"


[package]
name = "cp-tricks"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "kadanes-algo"
path = "src/kadanes-algo.rs"

[[bin]]
name = "time-while"
path = "src/time-while.rs"

[[bin]]
name = "nested-labels"
path = "src/nested-labels.rs"

[[bin]]
name = "trait-bounds"
path = "src/trait-bounds.rs"
