[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

[dependencies]
text_io = "0.1.12"
[[bin]]
name = "3-3-4-count_and_compare"
path = "src/3-3-4-count_and_compare.rs"

[[bin]]
name = "4-3-2-implementing_stack"
path = "src/4-3-2-implementing_stack.rs"

[[bin]]
name = "4-3-3-balanced-parantheses"
path = "src/4-3-3-balanced-parantheses.rs"

[[bin]]
name = "4-3-2-divide_by_two"
path = "src/4-3-2-divide_by_two.rs"

[[bin]]
name = "4-4-3_hot_potato"
path = "src/4-4-3_hot_potato.rs"

[[bin]]
name = "4-5-3_palindrome_check"
path = "src/4-5-3_palindrome_check.rs"

[[bin]]
name = "Valid_parentheses"
path = "src/Valid_parentheses.rs"

[[bin]]
name = "7-11-counting_sort"
path = "src/7-11-counting_sort.rs"

[[bin]]
name = "stack1"
path = "src/stack1.rs"

[[bin]]
name = "palindrome_st_qu"
path = "src/palindrome_st_qu.rs"

[[bin]]
name = "palindrome_check_deq"
path = "src/palindrome_check_deq.rs"

[[bin]]
name = "linked_list"
path = "src/linked_list.rs"

[[bin]]
name = "linkedlist_stack"
path = "src/linkedlist_stack.rs"

[[bin]]
name = "reverse_polish"
path = "src/reverse_polish.rs"

[[bin]]
name = "testing"
path = "src/testing.rs"

[[bin]]
name = "prims"
path = "src/prims.rs"

[[bin]]
name = "graphs"
path = "src/graphs.rs"
[[bin]]
name = "connnected_component"
path = "src/connnected_component.rs"
[[bin]]
name = "dfs"
path = "src/dfs.rs"
[[bin]]
name = "connected_component_store"
path = "src/connected_component_store.rs"
[[bin]]
name = "dfs_cycle"
path = "src/dfs_cycle.rs"
[[bin]]
name = "flood-fill-graph"
path = "src/flood-fill-graph.rs"
[[bin]]
name = "dfs-tree"
path = "src/dfs-tree.rs"
[[bin]]
name="dfs-tree-height-depth"
path="src/dfs-tree-height-depth.rs"


[[bin]]
name = "grahams_convexhall"
path = "src/grahams_convexhall.rs"

[[bin]]
name = "min-cost-dfs"
path = "src/min-cost-dfs.rs"

[[bin]]
name = "dfs-gfg"
path = "src/dfs-gfg.rs"
[[bin]]
name="tree-problem1"
path="src/tree-problem1.rs"
[[bin]]
name="convex_hull"
path="src/convex_hull.rs"
[[bin]]
name="deletes_node_linklist"
path="src/deletes_node_linklist.rs"

[[bin]]
name = "linked_list1"
path = "src/linked_list1.rs"

[[bin]]
name = "double_num_linkedlist"
path = "src/double_num_linkedlist.rs"

[[bin]]
name = "remove_middle_linkedlist"
path = "src/remove_middle_linkedlist.rs"
[[bin]]
name="remove_nodes_linkedlist"
path="src/remove_nodes_linkedlist.rs"

[[bin]]
name = "new"
path = "src/new.rs"
