[package]
name = "dynamic"
version = "0.1.0"
edition = "2021"

[dependencies]
[[bin]]
name = "2d_grid"
path = "src/2d_grid.rs"

[[bin]]
name = "2d-grid-comb"
path = "src/2d-grid-comb.rs"

[[bin]]
name = "2d-grid-iter"
path = "src/2d-grid-iter.rs"

[[bin]]
name = "some_variant"
path = "src/some_variant.rs"

[[bin]]
name = "fibonacci-dp"
path = "src/fibonacci-dp.rs"


[[bin]]
name = "fibonacci-space-optimized"
path = "src/fibonacci-space-optimized.rs"


[[bin]]
name = "a-frog-1"
path = "src/a-frog-1.rs"

[[bin]]
name = "b-frog-2"
path = "src/b-frog-2.rs"

[[bin]]
name = "long-inc-sub"
path = "src/long-inc-sub.rs"

[[bin]]
name = "coin-change"
path = "src/coin-change.rs"
