dependencies = { }


[package]
name = "fearless_concurrency"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "hello_thread"
path = "src/hello_thread.rs"


[[bin]]
name = "move_key"
path = "src/move_key.rs"


[[bin]]
name = "hello_channel"
path = "src/hello_channel.rs"


[[bin]]
name = "shared-state-mutex"
path = "src/shared-state-mutex.rs"


[[bin]]
name = "shared-memory-mutex"
path = "src/shared-memory-mutex.rs"
