dependencies = {}


[package]
name = "sorting_problems"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "a_amusing_joke"
path = "src/a_amusing_joke.rs"


[[bin]]
name = "b_atillas_favorite_problem"
path = "src/b_atillas_favorite_problem.rs"


[[bin]]
name = "b_barrels"
path = "src/b_barrels.rs"


[[bin]]
name = "b_middle_class"
path = "src/b_middle_class.rs"


[[bin]]
name = "static_range_sum_queries"
path = "src/static_range_sum_queries.rs"


[[bin]]
name = "weird_algo"
path = "src/weird_algo.rs"


[[bin]]
name = "missing_number"
path = "src/missing_number.rs"


[[bin]]
name = "repetitions"
path = "src/repetitions.rs"


[[bin]]
name = "increasing_array"
path = "src/increasing_array.rs"


[[bin]]
name = "permutation"
path = "src/permutation.rs"


[[bin]]
name = "b_sorted_adj_diff"
path = "src/b_sorted_adj_diff.rs"


[[bin]]
name = "two_knights"
path = "src/two_knights.rs"


[[bin]]
name = "whats_the_median"
path = "src/whats_the_median.rs"


[[bin]]
name = "vitos_family"
path = "src/vitos_family.rs"


[[bin]]
name = "duplicate_elem"
path = "src/duplicate_elem.rs"


[[bin]]
name = "find_the_diff"
path = "src/find_the_diff.rs"


[[bin]]
name = "height-checker"
path = "src/height-checker.rs"


[[bin]]
name = "intersection"
path = "src/intersection.rs"


[[bin]]
name = "sort-colors"
path = "src/sort-colors.rs"


[[bin]]
name = "min-abs-diff"
path = "src/min-abs-diff.rs"


[[bin]]
name = "mean-of-array"
path = "src/mean-of-array.rs"


[[bin]]
name = "max-product-of-three"
path = "src/max-product-of-three.rs"


[[bin]]
name = "kth-largest"
path = "src/kth-largest.rs"


[[bin]]
name = "smaller-than-curr"
path = "src/smaller-than-curr.rs"


[[bin]]
name = "age-sort"
path = "src/age-sort.rs"


[[bin]]
name = "train-swap"
path = "src/train-swap.rs"


[[bin]]
name = "a_twins"
path = "src/a_twins.rs"


[[bin]]
name = "a_dragons"
path = "src/a_dragons.rs"


[[bin]]
name = "c_advantage"
path = "src/c_advantage.rs"


[[bin]]
name = "c_create_teams"
path = "src/c_create_teams.rs"


[[bin]]
name = "a_choose_two_num"
path = "src/a_choose_two_num.rs"


[[bin]]
name = "b_equal_candies"
path = "src/b_equal_candies.rs"
[[bin]]
name = "b_grow_the_tree"
path = "src/b_grow_the_tree.rs"

[[bin]]
name = "helpful_math"
path = "src/helpful_math.rs"

[[bin]]
name = "a_towers"
path = "src/a_towers.rs"

[[bin]]
name = "b_tripple"
path = "src/b_tripple.rs"

[[bin]]
name = "a_reverse_substr"
path = "src/a_reverse_substr.rs"

[[bin]]
name = "a_new_year_meet"
path = "src/a_new_year_meet.rs"

[[bin]]
name = "a_olympiad"
path = "src/a_olympiad.rs"

[[bin]]
name = "a_medium_number"
path = "src/a_medium_number.rs"

[[bin]]
name = "a_remove_smallest"
path = "src/a_remove_smallest.rs"

[[bin]]
name = "b_basketball_together"
path = "src/b_basketball_together.rs"

[[bin]]
name = "a_make_equal_to_b"
path = "src/a_make_equal_to_b.rs"

[[bin]]
name = "rem_adj_duplicate"
path = "src/rem_adj_duplicate.rs"

[[bin]]
name = "a_brogramming_contest"
path = "src/a_brogramming_contest.rs"

[[bin]]
name = "b_variety_discour"
path = "src/b_variety_discour.rs"

[[bin]]
name = "extremely_round"
path = "src/extremely_round.rs"

[[bin]]
name = "we_need_zero"
path = "src/we_need_zero.rs"

[[bin]]
name = "a_unit_array"
path = "src/a_unit_array.rs"

[[bin]]
name = "a_walking_master"
path = "src/a_walking_master.rs"

[[bin]]
name = "c_prepend_append"
path = "src/c_prepend_append.rs"

[[bin]]
name = "r_palindrome_array"
path = "src/r_palindrome_array.rs"

[[bin]]
name = "reverse_queue"
path = "src/reverse_queue.rs"

[[bin]]
name = "easy_queue"
path = "src/easy_queue.rs"

[[bin]]
name = "mountain_peak"
path = "src/mountain_peak.rs"

[[bin]]
name = "implement_queue_stack"
path = "src/implement_queue_stack.rs"

[[bin]]
name = "a_wasthere_array"
path = "src/a_wasthere_array.rs"

[[bin]]
name = "b_set_of_strangers"
path = "src/b_set_of_strangers.rs"

[[bin]]
name = "a_palindromes_replace"
path = "src/a_palindromes_replace.rs"

[[bin]]
name = "serval_and_mocha"
path = "src/serval_and_mocha.rs"

[[bin]]
name = "a_everyone_likes_good_arrays"
path = "src/a_everyone_likes_good_arrays.rs"

[[bin]]
name = "b_odd_grasshopper"
path = "src/b_odd_grasshopper.rs"

[[bin]]
name = "testing"
path = "src/testing.rs"

[[bin]]
name = "forked"
path = "src/forked.rs"
[[bin]]
name = "wierd-algorithm-recurse"
path = "src/wierd-algorithm-recurse.rs"
[[bin]]
name = "flight_discount"
path = "src/flight_discount.rs"
[[bin]]
name = "c_visile_in_kakak"
path = "src/c_visile_in_kakak.rs"
[[bin]]
name = "tail_recursion"
path = "src/tail_recursion.rs"
[[bin]]
name = "google_interview1"
path = "src/google_interview1.rs"
[[bin]]
name = "a_jellyfish_and_undertale"
path = "src/a_jellyfish_and_undertale.rs"
[[bin]]
name = "a_print_recursion"
path = "src/a_print_recursion.rs"
[[bin]]
name = "f_print_even_indices"
path = "src/f_print_even_indices.rs"
[[bin]]
name = "subsets"
path = "src/subsets.rs"
[[bin]]
name = "m_palindromes"
path = "src/m_palindromes.rs"
[[bin]]
name = "b_print_one_n"
path = "src/b_print_one_n.rs"
[[bin]]
name = "c_n_to_1"
path = "src/c_n_to_1.rs"
[[bin]]
name = "print_using_rec"
path = "src/print_using_rec.rs"
[[bin]]
name = "backspace_compare"
path = "src/backspace_compare.rs"
[[bin]]
name = "reverse_using_stack"
path = "src/reverse_using_stack.rs"
[[bin]]
name = "remove_duplicate_stack"
path = "src/remove_duplicate_stack.rs"
[[bin]]
name = "get_middle_linked_list"
path = "src/get_middle_linked_list.rs"
[[bin]]
name = "b_01_game"
path = "src/b_01_game.rs"
[[bin]]
name = "ABC"
path = "src/ABC.rs"
[[bin]]
name = "abc"
path = "src/abc.rs"
[[bin]]
name = "b_having_been_treasurer"
path = "src/b_having_been_treasurer.rs"
[[bin]]
name = "monk_and_the_magical_candy"
path = "src/monk_and_the_magical_candy.rs"
[[bin]]
name = "next_great"
path = "src/next_great.rs"
[[bin]]
name = "a_adj_digit_sum"
path = "src/a_adj_digit_sum.rs"
[[bin]]
name = "fizzbuzz"
path = "src/fizzbuzz.rs"
[[bin]]
name = "left_max"
path = "src/left_max.rs"
[[bin]]
name = "reach_value"
path = "src/reach_value.rs"
[[bin]]
name = "palindrome_linked_list"
path = "src/palindrome_linked_list.rs"
[[bin]]
name = "self_dividing"
path = "src/self_dividing.rs"
[[bin]]
name = "ugly_number"
path = "src/ugly_number.rs"
[[bin]]
name = "day_of_the_year"
path = "src/day_of_the_year.rs"
[[bin]]
name = "b_perfecto"
path = "src/b_perfecto.rs"
[[bin]]
name = "a_play_never_ends"
path = "src/a_play_never_ends.rs"
[[bin]]
name = "c_trapmigiano_reggiano"
path = "src/c_trapmigiano_reggiano.rs"
[[bin]]
name = "a_make_it_zero"
path = "src/a_make_it_zero.rs"
[[bin]]
name = "infinite_sequence_easy"
path = "src/infinite_sequence_easy.rs"
[[bin]]
name = "b_comparison_string"
path = "src/b_comparison_string.rs"
[[bin]]
name = "ultra-fast-math"
path = "src/ultra-fast-math.rs"
[[bin]]
name = "a_divisibility"
path = "src/a_divisibility.rs"
[[bin]]
name = "b_balanced_array"
path = "src/b_balanced_array.rs"

[[bin]]
name = "tower_of_hanoi"
path = "src/tower_of_hanoi.rs"


[[bin]]
name = "josephus"
path = "src/josephus.rs"
[[bin]]
name = "convex_hull"
path = "src/convex_hull.rs"
[[bin]]
name = "a_dreamoon_stairs"
path = "src/a_dreamoon_stairs.rs"
[[bin]]
name = "d_not_a_cheap_string"
path = "src/d_not_a_cheap_string.rs"
[[bin]]
name = "a_olesya_and_rodion"
path = "src/a_olesya_and_rodion.rs"
[[bin]]
name = "a_naive_cheat"
path = "src/a_naive_cheat.rs"
[[bin]]
name = "a_petr_and_book"
path = "src/a_petr_and_book.rs"
[[bin]]
name = "balenced-parentheses"
path = "src/balenced-parentheses.rs"
[[bin]]
name = "implement_stack_using_queue"
path = "src/implement_stack_using_queue.rs"
[[bin]]
name = "factorial"
path = "src/factorial.rs"
[[bin]]
name = "b_taxi"
path = "src/b_taxi.rs"
[[bin]]
name = "array_hashmap"
path = "src/array_hashmap.rs"

[[bin]]
name = "closest_prime"
path = "src/closest_prime.rs"
[[bin]]
name="gcd_of_string"
path="src/gcd_of_string.rs"

[[bin]]
name = "a_insearch_of_ease"
path = "src/a_insearch_of_ease.rs"

[[bin]]
name = "a_wanna_be_the_guy"
path = "src/a_wanna_be_the_guy.rs"

[[bin]]
name = "a_games"
path = "src/a_games.rs"

[[bin]]
name = "a_candies_and_two_sis"
path = "src/a_candies_and_two_sis.rs"

[[bin]]
name = "a_yes"
path = "src/a_yes.rs"

[[bin]]
name = "a_anton_and_letters"
path = "src/a_anton_and_letters.rs"



[[bin]]
name = "a_magnets"
path = "src/a_magnets.rs"

[[bin]]
name = "a_presents"
path = "src/a_presents.rs"

[[bin]]
name = "a_is_your_horseshoe"
path = "src/a_is_your_horseshoe.rs"

[[bin]]
name = "a_george_and_accommodation"
path = "src/a_george_and_accommodation.rs"

[[bin]]
name = "b_queue_at_school"
path = "src/b_queue_at_school.rs"

[[bin]]
name = "a_domino_piling"
path = "src/a_domino_piling.rs"

[[bin]]
name = "a_anton_and_danik"
path = "src/a_anton_and_danik.rs"

[[bin]]
name = "a_gravity_flip"
path = "src/a_gravity_flip.rs"

[[bin]]
name = "a_hit_lottery"
path = "src/a_hit_lottery.rs"

[[bin]]
name = "hello-atcoder"
path = "src/hello-atcoder.rs"

[[bin]]
name = "a-insomnia-cure"
path = "src/a-insomnia-cure.rs"

[[bin]]
name = "a-vanaya-and-fence"
path = "src/a-vanaya-and-fence.rs"

[[bin]]
name = "lucky-four"
path = "src/lucky-four.rs"

[[bin]]
name = "dark-light"
path = "src/dark-light.rs"

[[bin]]
name = "a_i-love-username"
path = "src/a_i-love-username.rs"

[[bin]]
name = "a-lucky"
path = "src/a-lucky.rs"
