dependencies = { }


[package]
name = "sorting_problems"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "a_amusing_joke"
path = "src/a_amusing_joke.rs"


[[bin]]
name = "b_atillas_favorite_problem"
path = "src/b_atillas_favorite_problem.rs"


[[bin]]
name = "b_barrels"
path = "src/b_barrels.rs"


[[bin]]
name = "b_middle_class"
path = "src/b_middle_class.rs"


[[bin]]
name = "static_range_sum_queries"
path = "src/static_range_sum_queries.rs"


[[bin]]
name = "weird_algo"
path = "src/weird_algo.rs"


[[bin]]
name = "missing_number"
path = "src/missing_number.rs"


[[bin]]
name = "repetitions"
path = "src/repetitions.rs"


[[bin]]
name = "increasing_array"
path = "src/increasing_array.rs"


[[bin]]
name = "permutation"
path = "src/permutation.rs"


[[bin]]
name = "b_sorted_adj_diff"
path = "src/b_sorted_adj_diff.rs"


[[bin]]
name = "two_knights"
path = "src/two_knights.rs"


[[bin]]
name = "whats_the_median"
path = "src/whats_the_median.rs"


[[bin]]
name = "vitos_family"
path = "src/vitos_family.rs"


[[bin]]
name = "duplicate_elem"
path = "src/duplicate_elem.rs"


[[bin]]
name = "find_the_diff"
path = "src/find_the_diff.rs"


[[bin]]
name = "height-checker"
path = "src/height-checker.rs"


[[bin]]
name = "intersection"
path = "src/intersection.rs"


[[bin]]
name = "sort-colors"
path = "src/sort-colors.rs"


[[bin]]
name = "min-abs-diff"
path = "src/min-abs-diff.rs"


[[bin]]
name = "mean-of-array"
path = "src/mean-of-array.rs"


[[bin]]
name = "max-product-of-three"
path = "src/max-product-of-three.rs"


[[bin]]
name = "kth-largest"
path = "src/kth-largest.rs"


[[bin]]
name = "smaller-than-curr"
path = "src/smaller-than-curr.rs"


[[bin]]
name = "age-sort"
path = "src/age-sort.rs"


[[bin]]
name = "train-swap"
path = "src/train-swap.rs"


[[bin]]
name = "a_twins"
path = "src/a_twins.rs"


[[bin]]
name = "a_dragons"
path = "src/a_dragons.rs"
