dependencies = { }


[package]
name = "sorting_problems"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "a_amusing_joke"
path = "src/a_amusing_joke.rs"


[[bin]]
name = "b_atillas_favorite_problem"
path = "src/b_atillas_favorite_problem.rs"


[[bin]]
name = "b_barrels"
path = "src/b_barrels.rs"


[[bin]]
name = "b_middle_class"
path = "src/b_middle_class.rs"


[[bin]]
name = "static_range_sum_queries"
path = "src/static_range_sum_queries.rs"


[[bin]]
name = "weird_algo"
path = "src/weird_algo.rs"


[[bin]]
name = "missing_number"
path = "src/missing_number.rs"


[[bin]]
name = "repetitions"
path = "src/repetitions.rs"


[[bin]]
name = "increasing_array"
path = "src/increasing_array.rs"


[[bin]]
name = "permutation"
path = "src/permutation.rs"


[[bin]]
name = "b_sorted_adj_diff"
path = "src/b_sorted_adj_diff.rs"


[[bin]]
name = "two_knights"
path = "src/two_knights.rs"


[[bin]]
name = "whats_the_median"
path = "src/whats_the_median.rs"


[[bin]]
name = "vitos_family"
path = "src/vitos_family.rs"


[[bin]]
name = "duplicate_elem"
path = "src/duplicate_elem.rs"


[[bin]]
name = "find_the_diff"
path = "src/find_the_diff.rs"


[[bin]]
name = "height-checker"
path = "src/height-checker.rs"


[[bin]]
name = "intersection"
path = "src/intersection.rs"


[[bin]]
name = "sort-colors"
path = "src/sort-colors.rs"


[[bin]]
name = "min-abs-diff"
path = "src/min-abs-diff.rs"


[[bin]]
name = "mean-of-array"
path = "src/mean-of-array.rs"


[[bin]]
name = "max-product-of-three"
path = "src/max-product-of-three.rs"


[[bin]]
name = "kth-largest"
path = "src/kth-largest.rs"


[[bin]]
name = "smaller-than-curr"
path = "src/smaller-than-curr.rs"


[[bin]]
name = "age-sort"
path = "src/age-sort.rs"


[[bin]]
name = "train-swap"
path = "src/train-swap.rs"


[[bin]]
name = "a_twins"
path = "src/a_twins.rs"


[[bin]]
name = "a_dragons"
path = "src/a_dragons.rs"


[[bin]]
name = "c_advantage"
path = "src/c_advantage.rs"


[[bin]]
name = "c_create_teams"
path = "src/c_create_teams.rs"


[[bin]]
name = "a_choose_two_num"
path = "src/a_choose_two_num.rs"


[[bin]]
name = "b_equal_candies"
path = "src/b_equal_candies.rs"
[[bin]]
name = "b_grow_the_tree"
path = "src/b_grow_the_tree.rs"

[[bin]]
name = "helpful_math"
path = "src/helpful_math.rs"

[[bin]]
name = "a_towers"
path = "src/a_towers.rs"

[[bin]]
name = "b_tripple"
path = "src/b_tripple.rs"

[[bin]]
name = "a_reverse_substr"
path = "src/a_reverse_substr.rs"

[[bin]]
name = "a_new_year_meet"
path = "src/a_new_year_meet.rs"

[[bin]]
name = "a_olympiad"
path = "src/a_olympiad.rs"

[[bin]]
name = "a_medium_number"
path = "src/a_medium_number.rs"

[[bin]]
name = "a_remove_smallest"
path = "src/a_remove_smallest.rs"

[[bin]]
name = "b_basketball_together"
path = "src/b_basketball_together.rs"

[[bin]]
name = "a_make_equal_to_b"
path = "src/a_make_equal_to_b.rs"

